# project-template

./: .gitignore  README.md
.github/: dependabot.yml
.github/workflows/: _backend-deploy.yml  _frontend-deploy.yml  backend.yml  frontend.yml  pull-request.yml
apps/backend/: .pre-commit-config.yaml  Dockerfile  README.md  cloudbuild.yaml  noxfile_config.py  pyproject.toml  requirements.txt
apps/backend/django_api/: asgi.py  settings.py  urls.py  wsgi.py
apps/backend/pokemons_app/: __init__.py  api.py  apps.py
apps/backend/pokemons_app/admin/: __init__.py  admin_pokemons.py
apps/backend/pokemons_app/helpers/: __init__.py  get_client_ip.py  json_renderer.py
apps/backend/pokemons_app/migrations/: 0001_initial.py
apps/backend/pokemons_app/models/: __init__.py  pokemon.py
apps/frontend/: .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  Dockerfile  README.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/frontend/src/: App.css  App.tsx  vite-env.d.ts  vite-img.d.ts
apps/frontend/src/configs/: SidebarConfig.ts  ThemeConfig.ts
apps/frontend/src/helpers/: api.ts  buildUrl.ts
apps/frontend/src/hooks/: StoreHook.tsx
apps/frontend/src/libs/: Request.ts  Router.tsx
apps/frontend/src/models/: dto.ts  pokemon.ts
apps/frontend/src/routes/: Header.svelte
apps/frontend/src/services/: MetaService.ts  TranslationService.ts
apps/frontend/src/stores/: Reducer.ts  Store.ts
apps/frontend/src/utils/: CookiesUtil.ts  TextUtil.ts
scripts/: api-keys.sh  pre-commit.sh
(+32 files in other folders)
